# Monoid

./: .coverage  .gitignore  Design.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/api/enhance/: route.ts
frontend/src/app/new/: page.tsx
frontend/src/app/note/[id]/: NotePageClient.tsx  page.tsx
frontend/src/components/: NoteCard.tsx  SPARedirect.tsx
frontend/src/lib/: notes.ts  supabase.ts  utils.ts
frontend/src/types/: note.ts
src/monoid/: config.py
src/monoid/cli/: ai.py  db.py  graph.py  help.py  main.py  notes.py  search.py  templates.py
src/monoid/core/: domain.py  git_ops.py  storage.py
src/monoid/help/: __init__.py  suggestions.py  tips.py
src/monoid/intelligence/: openai.py  provider.py
src/monoid/metadata/: db.py  embeddings.py  graph.py  indexer.py
src/monoid/sync/: __init__.py  client.py  engine.py  models.py  tracker.py
src/monoid/templates/: __init__.py  builtin.py  registry.py
src/monoid/web/: __init__.py  graph_server.py
src/monoid/web/templates/: graph.html
supabase/: README.md  schema.sql
tests/e2e/: test_autotag.py  test_cli_flows.py  test_enhance.py  test_features_v2.py  test_interactive.py
tests/integration/: test_integration.py
tests/unit/: test_domain.py  test_git_ops.py
